--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Write unit tests against your helm charts using JavaScript.",
   "main": "index.js",
+  "bin": {
+    "helmtest": "bin/helmtest"
+  },
   "scripts": {
     "test": "jest tests"
   },
