--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "devDependencies": {
     "eslint": "^8.36.0",
     "eslint-config-google": "^0.14.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
