--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "helmtest",
+  "name": "@rophy123/helmtest",
   "version": "1.0.0",
   "description": "Write unit tests against your helm charts using JavaScript.",
   "main": "index.js",
