--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/rophy/helmtest#readme",
   "dependencies": {
+    "debug": "^4.3.4",
     "jest": "^29.5.0",
     "js-yaml": "^4.1.0"
   },
