--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
   "homepage": "https://github.com/rophy/helmtest#readme",
   "dependencies": {
     "debug": "^4.3.4",
-    "jest": "^29.5.0",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "jest": "^29.5.0"
+  },
+  "peerDependenciesMeta": {
+    "jest": {
+      "optional": true
+    }
   },
   "engines": {
     "node": ">=16.0.0"
