--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rophy123/helmtest",
+  "name": "@ricklin/helmtest",
   "version": "2.1.6",
   "description": "Write unit tests against your helm charts using JavaScript.",
   "main": "index.js",
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rophy/helmtest.git"
+    "url": "git+https://github.com/pchikoian/helmtest.git"
   },
-  "author": "Rophy Tsai <rophy@users.noreply.github.com>",
+  "author": "Rick Lin <932364+pchikoian@users.noreply.github.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rophy/helmtest/issues"
+    "url": "https://github.com/pchikoian/helmtest/issues"
   },
-  "homepage": "https://github.com/rophy/helmtest#readme",
+  "homepage": "https://github.com/pchikoian/helmtest#readme",
   "dependencies": {
     "debug": "^4.4.0",
     "js-yaml": "^4.1.0"
@@ -35,5 +35,9 @@
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "tests"
   }
 }
