--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -53,6 +53,12 @@ jobs:
         id: pkg
         run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
 
+      - name: Push git tag
+        uses: tvdias/github-tagger@v0.0.1
+        with:
+          repo-token: "${{ secrets.MY_GITHUB_TOKEN }}"
+          tag: "${{ steps.pkg.outputs.version }}-${{ steps.vars.outputs.sha_short }}"
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -62,4 +68,4 @@ jobs:
           push: true
           tags: |
             ${{ env.DOCKERHUB_REPO }}:latest
-            ${{ env.DOCKERHUB_REPO }}:${{ steps.pkg.outputs.version }}
+            ${{ env.DOCKERHUB_REPO }}:${{ steps.pkg.outputs.version }}-${{ steps.vars.output.sha_short }}
