--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -53,6 +53,10 @@ jobs:
         id: pkg
         run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
 
+      - name: Get short SHA
+        id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
       - name: Push git tag
         uses: tvdias/github-tagger@v0.0.1
         with:
@@ -68,4 +72,4 @@ jobs:
           push: true
           tags: |
             ${{ env.DOCKERHUB_REPO }}:latest
-            ${{ env.DOCKERHUB_REPO }}:${{ steps.pkg.outputs.version }}-${{ steps.vars.output.sha_short }}
+            ${{ env.DOCKERHUB_REPO }}:${{ steps.pkg.outputs.version }}-${{ steps.vars.outputs.sha_short }}
