--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ricklin/helmtest",
+  "name": "@rophy123/helmtest",
   "version": "2.1.6",
   "description": "Write unit tests against your helm charts using JavaScript.",
   "main": "index.js",
@@ -11,14 +11,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pchikoian/helmtest.git"
+    "url": "git+https://github.com/rophy/helmtest.git"
   },
-  "author": "Rick Lin <932364+pchikoian@users.noreply.github.com>",
+  "author": "Rophy Tsai <rophy@users.noreply.github.com>",
+  "contributors": [
+    "Rick Lin <932364+pchikoian@users.noreply.github.com>"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pchikoian/helmtest/issues"
+    "url": "https://github.com/rophy/helmtest/issues"
   },
-  "homepage": "https://github.com/pchikoian/helmtest#readme",
+  "homepage": "https://github.com/rophy/helmtest#readme",
   "dependencies": {
     "debug": "^4.4.0",
     "js-yaml": "^4.1.0"
