feat: npm trusted publishing with OIDC
- Use Node 24 for npm 11+ OIDC support
- Add workflow-level id-token: write permission
- Exclude exampleChart from npm test (jest testMatch)
- Add CONTRIBUTING.md and CLAUDE.md

--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
   "directories": {
     "lib": "lib",
     "test": "tests"
+  },
+  "jest": {
+    "testMatch": [
+      "<rootDir>/tests/**/*.test.js"
+    ]
   }
 }
